Fix the citations to include all sources

--- a/LocalChatBot/Components/Pages/Chat/Chat.razor
+++ b/LocalChatBot/Components/Pages/Chat/Chat.razor
@@ -11,8 +11,14 @@
 <ChatMessageList Messages="@_messages" InProgressMessage="@_currentResponseMessage">
     <NoMessagesContent>
         <div>This local LLM has added context from the following two Rust books so ask contextual questions to see the value of RAG</div>
-        <ChatCitation File="comprehensive-rust.pdf"/>
+        <ChatCitation File="black-hat-rust.pdf" />
+        <ChatCitation File="command-line-rust.pdf" />
+        <ChatCitation File="comprehensive-rust.pdf" />
+        <ChatCitation File="fullstack-rust.pdf" />
+        <ChatCitation File="rust-for-rustaceans.pdf" />
+        <ChatCitation File="rust-in-action.pdf" />
         <ChatCitation File="the-rust-programming-language.pdf" />
+        <ChatCitation File="zero-to-production-in-rust.pdf" />
     </NoMessagesContent>
 </ChatMessageList>
 
