--- a/LocalChatBot/Components/Pages/Chat/Chat.razor
+++ b/LocalChatBot/Components/Pages/Chat/Chat.razor
@@ -10,7 +10,7 @@
 
 <ChatMessageList Messages="@_messages" InProgressMessage="@_currentResponseMessage">
     <NoMessagesContent>
-        <div>This local LLM has added context from the following two Rust books so ask contextual questions to see the value of RAG</div>
+        <div>This local LLM has added context from the following Rust books so ask contextual questions to see the value of RAG</div>
         <ChatCitation File="black-hat-rust.pdf" />
         <ChatCitation File="command-line-rust.pdf" />
         <ChatCitation File="comprehensive-rust.pdf" />
